# ChangeLog for media-plugins/live
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.134 2011/06/22 14:28:26 aballier Exp $

*live-2011.06.16 (22 Jun 2011)

  22 Jun 2011; Alexis Ballier <aballier@gentoo.org> +live-2011.06.16.ebuild:
  version bump

*live-2011.05.25 (02 Jun 2011)

  02 Jun 2011; Alexis Ballier <aballier@gentoo.org> +live-2011.05.25.ebuild:
  version bump

*live-2011.03.14 (19 Apr 2011)

  19 Apr 2011; Alexis Ballier <aballier@gentoo.org> +live-2011.03.14.ebuild:
  version bump

*live-2011.01.24 (24 Jan 2011)

  24 Jan 2011; Alexis Ballier <aballier@gentoo.org> +live-2011.01.24.ebuild:
  version bump

  11 Jan 2011; Alexis Ballier <aballier@gentoo.org> -live-2008.09.02.ebuild,
  -live-2009.09.28.ebuild, -live-2009.11.12.ebuild, -live-2010.04.09.ebuild:
  remove old

*live-2010.10.15 (15 Oct 2010)

  15 Oct 2010; Alexis Ballier <aballier@gentoo.org> +live-2010.10.15.ebuild:
  version bump, break abi

  06 Aug 2010; Jeremy Olexa <darkside@gentoo.org> live-2010.04.09.ebuild:
  Migrate changes from Gentoo Prefix overlay. Keywords, EAPI3, build system
  tweaks for solaris/darwin, get_libname. Approved by team member

*live-2010.04.09 (24 Apr 2010)

  24 Apr 2010; Alexis Ballier <aballier@gentoo.org> +live-2010.04.09.ebuild:
  version bump

  06 Jan 2010; Brent Baude <ranger@gentoo.org> live-2009.06.02.ebuild:
  Marking live-2009.06.02 ppc64 for bug 277009

*live-2009.11.12 (21 Nov 2009)

  21 Nov 2009; Alexis Ballier <aballier@gentoo.org> +live-2009.11.12.ebuild:
  version bump

  21 Nov 2009; Alexis Ballier <aballier@gentoo.org> -live-2009.07.28.ebuild,
  -live-2009.09.04.ebuild:
  remove old

*live-2009.09.28 (29 Sep 2009)

  29 Sep 2009; Alexis Ballier <aballier@gentoo.org> +live-2009.09.28.ebuild,
  +files/config.gentoo-so-r1, +files/live-recursive.patch:
  version bump and link the libs with g++

*live-2009.09.04 (18 Sep 2009)
