@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/live
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.134 2011/06/22 14:28:26 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.135 2011/06/22 14:30:24 aballier Exp $
+
+  22 Jun 2011; Alexis Ballier <aballier@gentoo.org> -live-2010.10.15.ebuild,
+  -live-2011.01.24.ebuild, -live-2011.03.14.ebuild, -live-2011.05.25.ebuild:
+  remove old
 
 *live-2011.06.16 (22 Jun 2011)
 
